[package]
authors = ["Ricardo Martins <ricardo@scarybox.net>"]
description = "Temporary fork of rust-utp. See https://github.com/meqif/rust-utp/pull/10"
documentation = "http://meqif.github.io/rust-utp"
homepage = "https://github.com/maidsafe/rust-utp"
keywords = ["utp", "networking", "protocol", "transport"]
license = "MIT/Apache-2.0"
name = "temp_utp"
readme = "README.md"
repository = "https://github.com/meqif/rust-utp"
version = "0.6.16"

[dependencies]
env_logger = "0.3"
log = "0.3"
num = "0.1.27"
rand = "0.3"
time = "0.1.32"

[dev-dependencies]
quickcheck = "*"

[lib]
name = "utp"

[target]

[target.i686-apple-darwin]

[target.i686-apple-darwin.dependencies]
nix = "^0.3.8"

[target.i686-pc-windows-gnu]

[target.i686-pc-windows-gnu.dependencies]
libc = "*"

[target.i686-unknown-linux-gnu]

[target.i686-unknown-linux-gnu.dependencies]
nix = "^0.3.8"

[target.x86_64-apple-darwin]

[target.x86_64-apple-darwin.dependencies]
nix = "^0.3.8"

[target.x86_64-pc-windows-gnu]

[target.x86_64-pc-windows-gnu.dependencies]
libc = "*"

[target.x86_64-unknown-linux-gnu]

[target.x86_64-unknown-linux-gnu.dependencies]
nix = "^0.3.8"
